syntax = "proto3";

package task;

service TaskService {
  rpc createTask (CreateTaskRequest) returns (Task);
  rpc getTask (GetTaskRequest) returns (Task);
  rpc getTasks (GetTasksRequest) returns (GetTasksResponse);
  rpc updateTask (UpdateTaskRequest) returns (Task);
  rpc deleteTask (DeleteTaskRequest) returns (Empty);
}

message Task {
  string taskId = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
}

message CreateTaskRequest {
  string userId = 1;
  string title = 2;
  string description = 3;
}

message GetTaskRequest {
  string taskId = 1;
}

message GetTasksRequest {
  string userId = 1;
}

message GetTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  string taskId = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
}

message DeleteTaskRequest {
  string taskId = 1;
}

message Empty {}